Regression: Cycles doesn't use default color attributes with face corner domains. #103143

Closed
opened 2022-12-11 20:39:47 +01:00 by Max Edge · 16 comments

System Information
Operating system: Linux-5.15.0-56-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.11

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-10 12:43, hash: fe30856d83
Worked: 3.3.2

Apparently caused by 12becbf0df

Short description of error
The default color attribute for rendering is set by the camera icon, and it is the output of the Color Attribute node when no name is entered inside. In Cycles however, the output is always 0 if the color attribute belongs to the face corner domain.
This bug is not present in Eevee.
Example.png

Exact steps for others to reproduce the error
Select an object and give it a material > Give it a color attribute on the face domain > Connect the color attribute to a shader or to the output without entering a name for the attribute > Render in cycles.

Example file
Example.blend

**System Information** Operating system: Linux-5.15.0-56-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.11 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-10 12:43, hash: `fe30856d83` Worked: 3.3.2 Apparently caused by 12becbf0df **Short description of error** The default color attribute for rendering is set by the camera icon, and it is the output of the Color Attribute node when no name is entered inside. In Cycles however, the output is always 0 if the color attribute belongs to the face corner domain. This bug is not present in Eevee. ![Example.png](https://archive.blender.org/developer/F14052660/Example.png) **Exact steps for others to reproduce the error** Select an object and give it a material > Give it a color attribute on the face domain > Connect the color attribute to a shader or to the output without entering a name for the attribute > Render in cycles. **Example file** [Example.blend](https://archive.blender.org/developer/F14052663/Example.blend)
Author

Added subscriber: @Max-49

Added subscriber: @Max-49
Member

Added subscribers: @lichtwerk, @PratikPB2123

Added subscribers: @lichtwerk, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Hi, thanks for the report. I'm not really able to reproduce this in current master (05bf5c4e0ea8)
Could you check again in latest build: https://builder.blender.org/download/daily/
@lichtwerk , can you repro this on Linux?

**System Information**
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78
Hi, thanks for the report. I'm not really able to reproduce this in current master (`05bf5c4e0ea8`) Could you check again in latest build: https://builder.blender.org/download/daily/ @lichtwerk , can you repro this on Linux? ``` **System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78 ```
Author

Hi, I still see the bug in 3.5, 3.4, but not 3.3.2. It is both my Windows and Linux OS, on both CPU and GPU rendering with cycles.

Hi, I still see the bug in 3.5, 3.4, but not 3.3.2. It is both my Windows and Linux OS, on both CPU and GPU rendering with cycles.
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm, too, will check.

I can confirm, too, will check.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Apparently caused by 12becbf0df

CC @HooglyBoogly

Apparently caused by 12becbf0df CC @HooglyBoogly
Philipp Oeser changed title from Cycles doesn't use default color attributes with face corner domains. to Regression: Cycles doesn't use default color attributes with face corner domains. 2022-12-12 10:44:35 +01:00
Hans Goudey self-assigned this 2022-12-12 14:37:56 +01:00
Member

@HooglyBoogly : cycles seems to "see" internal attributes such as .select in attr_create_generic (but only for facecorners)

@HooglyBoogly : cycles seems to "see" internal attributes such as `.select` in `attr_create_generic` (but only for facecorners)
Member

The RNA API should see "internal" attributes like .select/.hide, etc.. Those aren't meant to be hidden from the Python API.

The problem is that render_color_index doesn't count those attributes. The best solution I can think of is exposing the name of that attribute as a string.

The RNA API *should* see "internal" attributes like `.select`/`.hide`, etc.. Those aren't meant to be hidden from the Python API. The problem is that `render_color_index` _doesn't_ count those attributes. The best solution I can think of is exposing the name of that attribute as a string.
Member

The problem is that the "render color index" skips attributes with non-color domains or types, but Cycles increments an index for every single attribute. So the problem was already there, it's just exposed by the fact that there's another attribute there.

The problem is that the "render color index" skips attributes with non-color domains or types, but Cycles increments an index for every single attribute. So the problem was already there, it's just exposed by the fact that there's another attribute there.

This issue was referenced by d6e75e2c23

This issue was referenced by d6e75e2c2374d66a42ea3b3d694f095ad5c5f1cb

This issue was referenced by 9fd834fbb3

This issue was referenced by 9fd834fbb3468133b807b50808f3ccfbf55cc7f1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103143
No description provided.